Can't unlink particle systems (nor set to 0 users) #49151

Closed
opened 2016-08-23 22:49:02 +02:00 by Jaggz H · 9 comments

I'm not sure if this is a bug or my own usage. - [x] is greyed out on all particle systems.

Only one object is currently intended to have a particle system, and only the single (non .00#) system.

test-fs2.blend

I'm not sure if this is a bug or my own usage. - [x] is greyed out on all particle systems. Only one object is currently intended to have a particle system, and only the single (non .00#) system. [test-fs2.blend](https://archive.blender.org/developer/F342049/test-fs2.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @jaggz

Added subscriber: @jaggz
Bastien Montagne self-assigned this 2016-08-24 00:44:01 +02:00

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

Oh… Thought it was new issue, but it has been like that since at least 2.75 (and most likely since the beginning, reading code history…).

So no bug here, everything works as expected, you are supposed to delete psys by removing their 'slots' in objects, that’s all.

Oh… Thought it was new issue, but it has been like that since at least 2.75 (and most likely since the beginning, reading code history…). So no bug here, everything works as expected, you are supposed to delete psys by removing their 'slots' in objects, that’s all.
Author

Indeed, but there seems to be some issue with the user count not dropping to 0 when a slot is removed.

When adding slots, and removing them, I end up with non-0 user particle-settings entries. Upon save and reload, they are still there, and their user-count is then 0, then another save and reload and they'll be gone.

At least, that's what seems to happen for me. :)

Indeed, but there seems to be some issue with the user count not dropping to 0 when a slot is removed. When adding slots, and removing them, I end up with non-0 user particle-settings entries. Upon save and reload, they are still there, and their user-count is then 0, then another save and reload and they'll be gone. At least, that's what seems to happen for me. :)

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Ah yes indeed, looks like there’s a missing usercount handling here… will check.

Ah yes indeed, looks like there’s a missing usercount handling here… will check.

This issue was referenced by fef0cd8191

This issue was referenced by fef0cd81916f84b0efd9e059ac596c19e2627424

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49151
No description provided.