Fix T49151: ParticleSettings' usercount not decremented when removing a psys from an object.